Indicateur si trop de résultats retournés (#624).
Cette révision ajoute un indicateur visuel (triangle rouge d'avertissement)
dans la recherche de VigiMap/VigiGraph lorsque la recherche a retourné plus
de 100 messages (indiquant que d'autres résultats existent mais ne sont pas
affichés).


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6994 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigigraph/css/search.css
+++ b/src/vigilo/themes/public/vigigraph/css/search.css
@@ -6,7 +6,7 @@
 #search_form label,
 #search_form input {
     float: left;
-    margin: 8px;
+    margin: 4px;
     font-size: 12px;
     padding: 2px;
 }
@@ -18,7 +18,6 @@
 
 #search_form #search_form_search {
     width: 93px;
-    float: right;
     padding: 0;
 }
 
@@ -33,4 +32,10 @@
     height: 275px;
     position: relative;
     width: 540px;
+}
+
+#search_form > img {
+    visibility: hidden;
+    float: right;
+    margin: 4px;
 }
