--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -4,6 +4,9 @@
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
+
+<xi:include href="searchlib.html" />
+
 <head py:match="head" py:attrs="select('@*')">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <meta name="version" content="${tg.config.get('version')}" />
@@ -15,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/reset.css')}" />
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/vigigraph.css')}" />
+    <link rel="stylesheet" type="text/css" href="${tg.url('/css/search.css')}"/>
 
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
@@ -48,10 +52,8 @@
         </span>
 
         <div class="header_item">
-            <a id="search" href="?">
-                <img src="${tg.url('/images/search.png')}"
-                    alt="Search" title="Search for a specific host/graph" />
-            </a>
+
+            ${search_button()}
 
             <a id="print" href="?">
                 <img src="${tg.url('/images/document-print.png')}"
@@ -80,25 +82,7 @@
     </div>
 
     <!--! Container utilisé par le formulaire de recherche. -->
-    <div style="display: none">
-        <div id="search_container">
-            <form id="search_form" action="" method="post">
-                <label for="search_form_host">Host:</label>
-                <input type="text" id="search_form_host" name="search_form_host"
-                    title="Search for a host (&quot;*&quot; for all, 100 max)" />
-                <label for="search_form_graph">Graph:</label>
-                <input type="text" id="search_form_graph" name="search_form_graph"
-                    title="Search for a graph (&quot;*&quot; for all, 100 max)" />
-                <input type="submit" id="search_form_search" value="${l_('Search')}" />
-                <img alt="${l_('Warning')}"
-                    src="${tg.url('/images/messagebox_warning.png')}"
-                    title="${l_('Your search returned more than 100 results. '
-                                'Only the first 100 entries are displayed.')}"/>
-                <div>Results:</div>
-                <div id="search_results"></div>
-            </form>
-        </div>
-    </div>
+    ${search_form()}
 
     <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
         <div py:strip="True" py:if="flash" py:content="XML(flash)" />
