Déplacement de babelThemes.js dans le sous-dossier lib
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@7077 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -20,11 +20,11 @@
     <script type="text/javascript" src="${tg.url('/js/lib/jxlib.js')}"></script>
     <script type="text/javascript">Jx.baseURL = '${tg.url("/js/lib")}';</script>
     <!--!
-        "js/libs/babel.js" et "js/babelThemes.js" doivent être chargés
+        "js/lib/babel.js" et "js/lib/babelThemes.js" doivent être chargés
         avant "i18n", qui doit être chargé avant nos scripts.
     -->
     <script type="text/javascript" src="${tg.url('/js/lib/babel.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/babelThemes.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/babelThemes.js')}"></script>
     <script type="text/javascript" src="${tg.url('/i18n')}"></script>
 
     <script type="text/javascript">
