--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -30,11 +30,11 @@
     </script>
 
     <!--!
-        "js/libs/babel.js" et "js/babelThemes.js" doivent être chargés
+        "js/lib/babel.js" et "js/lib/babelThemes.js" doivent être chargés
         avant "i18n", qui doit être chargé avant nos scripts.
     -->
     <script type="text/javascript" src="${tg.url('/js/lib/babel.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/babelThemes.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/babelThemes.js')}"></script>
     <script type="text/javascript" src="${tg.url('/i18n')}"></script>
 
     <script type="text/javascript" src="${tg.url('/js/grouptree.js')}"></script>
