Si app_path vaut juste "/", on aura une erreur.
On évite ça en strippant "/" par la droite de app_path,
et en s'assurant que toutes les URL construites à partir
de app_path commence par un "/".


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@7084 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -31,7 +31,7 @@
 
     <script type="text/javascript">
     /*<![CDATA[*/
-        var app_path = "${tg.url('/').encode('backslash')}";
+        var app_path = "${tg.url('/').rstrip('/').encode('backslash')}";
         var debug_mode = ${int(tg.config['debug'])};
         var refresh_status = ${int(tg.session.get('refresh', asbool(tg.config.get('refresh_enabled', False))))};
         var refresh_delay = ${float(tg.session.get('refresh_delay', 30))};
