Meilleure ergonomie pour la suppression en mode édition dans VigiMap (#661 et #667).
Améliorations pour l'ergonomie de la boîte de dialogue lorsqu'on supprime un objet
sur une carte ou une carte complète :
- Dans le titre, on affiche le type d'objet manipulé.
- Dans le titre, on utilise les libellés définis sur la carte -- pour les liens,
  on affiche les 2 extrêmités du lien avec une flèche bidirectionnelle horizontale
  identique à celle du dialogue de propriétés en mode affichage.
- Le bouton de confirmation de la suppression rappelle le type de l'objet.
- Lors de la suppression d'une carte, une icône supplémentaire est affichée
  pour mettre l'accent sur le fait que c'est la carte toute entière qui sera
  supprimée (#667).
- Quelques corrections dans les styles CSS pour la mise en forme du dialogue.


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@7098 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/edition.css
+++ b/src/vigilo/themes/public/vigimap/css/edition.css
@@ -10,3 +10,24 @@ label.required {
     display: none;
 }
 
+#deleteconfirmicon {
+    float: left;
+    margin-right: 16px;
+}
+
+#deleteconfirmtext {
+    margin: 10px 10px
+}
+
+#deleteconfirmbuttons input {
+    margin: 0.5em 20px 0 20px;
+}
+
+#deleteconfirmbutton1 {
+    float: left;
+}
+
+#deleteconfirmbutton2 {
+    float: right;
+}
+
