- Correction d'un bug dans l'affichage des icônes du header déjà constaté sur VigiMap. (voir r6934) ; - Suppression du soulignement des images du header sur les navigateurs basés sur Webkit (également constaté sur VigiMap, voir r5488).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@7285 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigigraph/css/vigigraph.css
+++ b/src/vigilo/themes/public/vigigraph/css/vigigraph.css
@@ -37,8 +37,20 @@ h1 a:hover {
     margin-top: 0.1em;
 }
 
-.header_item {
+#header a {
+    text-decoration: none;
+}
+
+#header a img {
+    display: block;
+}
+
+.header_icons {
     float: right;
+}
+
+.header_icon {
+    float: left;
 }
 
 table.header_table {
