--- a/src/vigilo/themes/public/vigigraph/css/vigigraph.css
+++ b/src/vigilo/themes/public/vigigraph/css/vigigraph.css
@@ -19,14 +19,11 @@ h1 a:hover {
     text-shadow: 0.1em 0.1em 0.2em #aaa;
 }
 
-#logo {
-    margin: 0.3em 0.2em;
-    float: left;
-}
-
 #header {
-    border-bottom: 1px solid #a4a4a4;
+    position: fixed;
+    width: 100%;
     height: 24px;
+    border-bottom: 1px solid #a4a4a4;
     background-color: #f1f1f1;
     margin: 0;
     padding: 0.1em 0;
@@ -53,46 +50,17 @@ h1 a:hover {
     float: left;
 }
 
-table.header_table {
-    background-color: #F0F1F5;
-    border-collapse:collapse;
-    width: 100%;
+#logo {
+    margin: 0.3em 0.2em;
+    float: left;
 }
 
-table.header_table td, table.header_table th {
-    padding: 2px;
-    font-size: 12px;
-    color: #314455;
+/* Toolbar */
+
+#toolbar {
+    position: fixed;
+    margin-top: 26px;
 }
-
-table.header_table th {
-    text-align: center;
-    background-color: #F0F1F5;
-}
-
-table.header_table a {
-    color: #a4a4a4;
-    text-decoration: none;
-}
-
-table.header_table a:hover {
-    color: #a4a4a4;
-    text-decoration: underline;
-}
-
-/*Styles logo*/
-table.header_table td.logo {
-
-    padding-left: 10px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-}
-
-img.logo {
-    margin: 0px;
-    border: 0px;
-}
-
 
 /* Flash */
 
