--- a/src/vigilo/themes/public/vigigraph/css/vigigraph.css
+++ b/src/vigilo/themes/public/vigigraph/css/vigigraph.css
@@ -62,6 +62,10 @@ h1 a:hover {
     margin-top: 26px;
 }
 
+.menu {
+    margin-top: 20px;
+}
+
 /* Flash */
 
 #flash {
@@ -107,4 +111,14 @@ h1 a:hover {
     top: 3px;
     right: 5px;
     cursor: help;
+}
+
+/* Graphes */
+
+.graphs {
+    margin-top: 15px;
+}
+
+.graphs a {
+    text-decoration: none;
 }
