Activation de flash() dans VigiMap (#757).
Ajout du code pour permettre l'affichage de messages avec la méthode
flash() de !TurboGears dans les pages de VigiMap.

Change-Id: I55ebfecd60e3e8ae25b9030d108c8fb14bbfaf2f

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -499,3 +499,24 @@ table tr td.labelcol {
 input[type=submit] {
     margin-top: 15px;
 }
+
+/* Flash */
+
+#flash {
+	opacity: 0;
+}
+
+#flash, .notice {
+    font-size: 120%;
+    font-weight: bolder;
+    bottom: 0px;
+    right: 0px;
+    width: 100%;
+    position: absolute;
+    /* Pour les navigateurs un peu plus évolués. */
+    position: fixed;
+}
+#flash div, .notice {
+    padding: 8px 7px 6px 44px;
+}
+
