Icône pour les messages émis via flash().
Ajoute une icône en fonction du type de message flashé,
à la manière de VigiBoard.
Voir aussi #757.

Change-Id: I9231c5ec2fa433eb67ab8736e964a4aa9c22b70a

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -520,3 +520,18 @@ input[type=submit] {
     padding: 8px 7px 6px 44px;
 }
 
+#flash .ok {
+    background: #d8ecd8 url(../images/ok.png) no-repeat scroll 0px center;
+}
+#flash .warning {
+    background: #fff483 url(../images/warning.png) no-repeat scroll 0px center;
+}
+#flash .error {
+    background: #f9c5c1 url(../images/error.png) no-repeat scroll 0px center;
+}
+#flash .alert,
+#flash .info,
+.notice {
+    background: #EEEEFF url(../images/info.png) no-repeat scroll 0px center;
+}
+
