Dialogue flottant pour éléments de carte (#679).
Modifie VigiMap pour que les éléments de carte soient présentés dans un
dialogue flottant (façon "boîte à outils") plutôt que comme un menu
rabattable en mode édition.
Le dialogue est affiché par défaut et peut être masqué en cliquant sur
le bouton "Éléments de carte" dans la barre d'outils (comme avant).
Certains comportements ont été modifiés :
- Un clic sur "Liste des cartes" ne cache pas ce dialogue (contrairement
  au menu auparavant).
- L'activation des "Éléments de cartes" ne cache plus la liste des
  cartes.
- Une opération sur la carte alors qu'un élément était sélectionné ne
  repasse plus automatiquement en mode "Curseur".
- Un second clic sur un élément ne désélectionne pas l'élément pour
  revenir au mode "Curseur" (le 2nd clic est désormais ignoré).

Change-Id: Ib4c202421f913e4094d3393250847a5e24d457b7

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -84,8 +84,7 @@ h1 a:hover {
 /* Menu de gauche */
 
 #leftmenu,
-#maplist,
-#mapitems {
+#maplist {
     position: absolute;
     left: 0;
     margin: 0;
@@ -102,8 +101,7 @@ h1 a:hover {
  * Pour rendre les menus opaques
  */
 #leftmenu,
-#maplist,
-#mapitems {
+#maplist {
     opacity: 0.92; /* CSS standard : FireFox, Opera, Chrome and Safari */
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=92)"; /* IE 8 */
     /* -ms-filter: "alpha(opacity=92)"; */
