Liens conditionnels dans VigiBoard (cf. #771)
Permet de conditionner l'affichage des liens sur un événement selon son
contexte, à l'aide d'une fonction de garde.
Cette fonction est libre de modifier le contexte si elle le souhaite.

Une adaptation de la syntaxe de déclaration des liens dans le fichier
app_cfg.py a été nécessaire (afin d'accomoder les paramètres
supplémentaires).

Change-Id: I82fa4133c9550fd34c4acccde5384b0c3813240f

--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -60,7 +60,7 @@
         <div id="external_links">
             <ul>
                 <li py:for="edname, edit in enumerate(tg.config['vigiboard_links.eventdetails'])">
-                    <a href="#" id="DetailsDialog_${edname}">${edit[0]}</a>
+                    <a href="#" id="DetailsDialog_${edname}">${edit['label']}</a>
                 </li>
             </ul>
         </div>
@@ -135,10 +135,16 @@ window.addEvent("domready", function () {
                             encodeURIComponent(details.host));
                     }
                     for (i = 0; i < ${len(tg.config['vigiboard_links.eventdetails'])}; i++) {
-                        $$('DetailsDialog_'+i.toString()).set({
-                            'href': details.eventdetails[i.toString()].url,
-                            'target': details.eventdetails[i.toString()].target
+                        var index = i.toString();
+                        if (!$$chk(details.eventdetails[index])) {
+                            $$('DetailsDialog_'+index).getParent().hide();
+                            continue;
+                        }
+                        $$('DetailsDialog_'+index).set({
+                            'href': details.eventdetails[index].url,
+                            'target': details.eventdetails[index].target
                         });
+                        $$('DetailsDialog_'+index).getParent().show();
                     }
                     window.details_dialog.setBusy(false);
 
