Corrections dans VigiGraph
* Correction de l'affichage de la barre d'en-tête dans la page de
  métrologie d'un hôte.
* Ajout d'un avertissement sur les modifications d'en-tête dans
  main.html.
* Tri des graphes sur la page de métrologie d'un hôte par ordre
  alphabétique (et insensible à la casse).

Change-Id: I856ff77fd5788a177de217c565b1452e6b537e24
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/135
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Aurelien BOMPARD <aurelien.bompard@c-s.fr>

--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -37,7 +37,7 @@
                 Enfin, on injecte l'URL sans modification dans le code
                 du lien HTML qu'on veut afficher.
             -->
-            <py:for each="graph in graphs"
+            <py:for each="graph in sorted(graphs, key=lambda x: x.name.lower())"
                 py:with="prefix = len(tg.url('/'))+1; graph_url = tg.url('/', {
                     'g': tg.url('/', {
                         'host_': host,
