--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -44,6 +44,10 @@
 </head>
 
 <body py:match="body" py:attrs="select('@*')">
+    <!--!
+        Pensez également à mettre à jour main_simplified.html
+        si vous changez l'en-tête.
+    -->
     <div id="header">
         <span id="logo">
             <a href="${tg.url(tg.config.get('logo_link', '/'))}">
