--- a/src/vigilo/themes/templates/vigigraph/main_simplified.html
+++ b/src/vigilo/themes/templates/vigigraph/main_simplified.html
@@ -19,6 +19,10 @@
 </head>
 
 <body py:match="body" py:attrs="select('@*')">
+    <!--!
+        Pensez également à mettre à jour main.html
+        si vous changez l'en-tête.
+    -->
     <div id="header">
         <span id="logo">
             <a href="${tg.url(tg.config.get('logo_link', '/'))}">
@@ -26,19 +30,22 @@
             </a>
         </span>
 
-        <div class="header_item">
-            <py:if test="tg.config.get('help_link')">
-            <a href="${tg.config['help_link']}">
-                <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
-            </a>
-            </py:if>
+        <div class="header_icons">
+
+            <div class="header_icon">
+                <py:if test="tg.config.get('help_link')">
+                <a href="${tg.config['help_link']}">
+                    <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
+                </a>
+                </py:if>
+            </div>
 
             <!--! On masque le bouton de login/logout si une authentification externe est utilisée. -->
-            <span py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" py:strip="True">
-            <a href="${tg.url('/logout_handler')}">
-                <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
-            </a>
-            </span>
+            <div py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" class="header_icon">
+                <a href="${tg.url('/logout_handler')}">
+                    <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
+                </a>
+            </div>
         </div>
 
         <h1><a href="${tg.url('/')}">VigiGraph</a></h1>
