Fichiers statiques extensions et erreur 404
Ce changement empêche le chargement de fichiers statiques (CSS/JS) pour
une extension de VigiMap si le fichier en question n'existe pas.
Ceci évite des erreurs 404 pour les extensions qui ne contiennent pas de
code ni de fichier CSS/JS (par exemple, les extensions qui ajoutent des
bibliothèques d'images).

Change-Id: If09cbf83c40e59002bf26aea1698765da5f59267
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/136
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -44,10 +44,9 @@
     <script type="text/javascript" src="${tg.url('/js/ServiceElement.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/search.js')}"></script>
 
-    <div py:for="widget in widgets" py:strip="True">
-        <script type="text/javascript" src="${tg.url(widget+'.js')}"></script>
-        <link rel="stylesheet" type="text/css" href="${tg.url(widget+'.css')}" />
-    </div>
+    <!--! Fichiers statiques des extensions. -->
+    <script py:for="widget in widgets['js']" type="text/javascript" src="${tg.url(widget+'.js')}"></script>
+    <link py:for="widget in widgets['css']" rel="stylesheet" type="text/css" href="${tg.url(widget+'.css')}" />
 
     <meta py:replace="select('*|comment()')"/>
 </head>
