Meilleure gestion des encodages dans VigiGraph
- Utilisation de caractères accentués dans plusieurs tests pour mettre
  en évidence les éventuels problèmes liés à des conversions explicites
  ou implicites de/vers Unicode.
- Correction des templates de VigiGraph pour gérer correctement les
  caractères accentués.
- Ajout d'un pseudo-décorateur de pagination utilisant la même API que
  pour les autres (pseudo-)décorateurs de !TurboGears (nécessaire à
  cause d'un conflit entre le (vrai) décorateur "paginate" de
  !TurboGears et le pseudo-décorateur "validate".
  Voir ticket 2302 dans le trac de !TurboGears.
- Utilisation de ce décorateur pour valider correctement les paramètres
  passés à la méthode searchHost du contrôleur rpc de VigiGraph.

Change-Id: I209700c586943ba6b60a4f4f68940b33617c77ba
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/272
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Aurelien BOMPARD <aurelien.bompard@c-s.fr>

--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -4,6 +4,7 @@
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
 
+<?python import urllib2 ?>
 <xi:include href="main_simplified.html" />
 
     <head>
@@ -13,7 +14,8 @@
     <body class='main'>
         <h2>${l_('List of graphs for "%s"') % host}</h2>
         <p class="menu">
-        [<a href="${tg.url('/nagios/%s/cgi-bin/status.cgi' % host, {
+        [<a href="${tg.url('/nagios/%s/cgi-bin/status.cgi' %
+                urllib2.quote(host.encode('utf-8'), ''), {
             'host_': host,
         })}">${l_('Monitoring page for "%s"') % host}</a>]
         <py:for each="h in presets">
@@ -52,7 +54,8 @@
             <img alt="${l_('Graph \'%(graph)s\' on \'%(host)s\'') % {
                     'host': host,
                     'graph': graph.name,
-                }}" src="${tg.url('/vigirrd/%s/index' % host, {
+                }}" src="${tg.url('/vigirrd/%s/index' %
+                    urllib2.quote(host.encode('utf-8'), ''), {
                 'host_': host,
                 'graphtemplate': graph.name,
                 'start': start,
