Améliorations autour de l'authentification.
Remplace le middleware d'authentification de repoze.who par notre propre
version.
Différences :
- Si une authentification externe a déjà eu lieu, elle ne court-circuite
  pas entièrement le middleware. Les plugins challengers & mdproviders
  sont tout de même exécutés.
- Il positionne la variable "vigilo.external_auth" dans l'environnement
  de la requête à True si une authentification externe a eu lieu (ou à
  False respectivement, si aucune authentification externe n'a eu lieu).

Les différents fichiers de configuration ont été mis à jour, ainsi que
les templates HTML et les contrôleurs/bibliothèques qui en dépendait.
Ils utilisent désormais le contenu de la variable d'environnement de
requête "vigilo.external_auth" pour adapter leur comportement.

L'option de configuration "external_auth" n'est plus utilisée (des
utilisateurs en authentification externe et en authentification interne
pourraient cohabiter simultanément dans le système).

La page de gestion du profil de l'utilisateur (dans VigiAdmin) est
toujours accessible, même lorsque l'utilisateur est connecté via un
mécanisme d'authentification externe.
L'idée est de permettre aux utilisateurs de définir un mot de passe de
secours qui leur permettra de se connecter même lorsque le mécanisme
d'authentification externe n'est pas disponible (ex: serveur Kerberos
injoignable).

Le script "vigilo-passwd" autorise la modification d'un compte dont le
mot de passe n'a pas encore été défini par son propriétaire (pour le
moment, un mot de passe est demandé à l'utilisateur, bien que celui-ci
ne soit pas réellement utilisé/vérifié).

Tout ce travail vise à préparer le terrain pour le ticket #883
concernant la gestion d'un mécanisme d'authentificaton de repli.

Change-Id: If7bc18eb00f107f143ec9586719f163dddfd48d1
Refs: #883.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/376
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Aurelien BOMPARD <aurelien.bompard@c-s.fr

--- a/src/vigilo/themes/templates/vigiadmin/master.html
+++ b/src/vigilo/themes/templates/vigiadmin/master.html
@@ -22,14 +22,12 @@
   <ul id="mainmenu">
     <li class="first"><a href="${tg.url('/')}" class="${('', 'active')[defined('page') and page==page=='index']}">Welcome</a></li>
     <!--! On masque le bouton de login/logout si une authentification externe est utilisée. -->
-    <span py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" py:strip="True">
+    <span py:if="tg.auth_stack_enabled and not tg.request.environ['vigilo.external_auth']" py:strip="True">
     <li py:if="not request.identity" id="loginbtn" class="loginlogout ${('', 'active')[defined('page') and page==page=='login']}"><a href="${tg.url('/login')}">Login</a></li>
     <li py:if="request.identity" id="loginbtn" class="loginlogout"><a href="${tg.url('/logout_handler')}">Logout</a></li>
     </span>
     <li py:if="request.identity" id="adminbtn" class="${('', 'active')[defined('page') and page==page=='admin']}"><a href="${tg.url('/perms')}">Permissions</a></li>
-    <span py:if="request.identity and request.identity.get('repoze.who.userid') == 'manager' or not asbool(tg.config.get('external_auth'))" py:strip="True">
     <li id="profilebtn" class="${('', 'active')[defined('page') and page==page=='profile']}"><a href="${tg.url('/profile')}">Profile</a></li>
-    </span>
 <!--! La collecte est désactivée. -->
 <!--! <li py:if="request.identity" id="collectbtn" class="${('', 'active')[defined('page') and page==page=='collect']}"><a href="${tg.url('/collect')}">Collect</a></li> -->
 <!--! La maintenance planifiée est désactivée tant que certains problèmes n'auront pas été résolus. -->
