--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -56,7 +56,7 @@
         </span>
 
         <div class="header_icons">
-            
+
             <div class="header_icon">
                 ${search_button()}
             </div>
@@ -77,7 +77,7 @@
             </div>
 
             <!--! On masque le bouton de login/logout si une authentification externe est utilisée. -->
-            <div py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" class="header_icon">
+            <div py:if="tg.auth_stack_enabled and not tg.request.environ['vigilo.external_auth']" class="header_icon">
                 <a href="${tg.url('/logout_handler')}">
                     <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
                 </a>
