Propagation du fragment de l'URL (#923).
Propage la partie "fragment" de l'URL d'origine dans le formulaire
d'authentification (login.html). Ceci permet d'envoyer une URL vers
VigiMap ou VigiGraph qui contient des données à afficher (carte ou
graphes) dans le fragment à une personne non-authentifiée.

Une fois la personne authentifiée, elle aura accès à la page initiale,
ie: la carte ou les graphes s'afficheront comme si elle était
authentifiée depuis le début.

Le mécanisme utilisé (basé sur du JavaScript) détecte les changements
dans le fragment survenus APRÈS le chargement du formulaire de login
(quand on essaye de charger la même page mais avec un fragment
différent, par exemple une nouvelle carte).
Il fonctionne également même après un échec de l'authentification
(erreur sur le mot de passe à la première tentative de login par
exemple).

Change-Id: I5be946d95f41f8868d980569af4590452f50169e
Refs: #923.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/456
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Aurelien BOMPARD <aurelien.bompard@c-s.fr>

--- a/src/vigilo/themes/templates/common/login.html
+++ b/src/vigilo/themes/templates/common/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
                     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:py="http://genshi.edgewall.org/"
@@ -7,8 +7,11 @@
 <xi:include href="master.html" />
 
 <head>
-<meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
-<title>Login Form</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
+    <title>Login Form</title>
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/login.js')}"></script>
 </head>
 
 <body>
@@ -21,13 +24,5 @@
 </form>
 </div>
 
-<script type="text/javascript">
-window.onload = function () {
-    if (document.getElementById) {
-        var o = document.getElementById('login');
-        o.focus();
-    }
-}
-</script>
 </body>
 </html>
