Couleur historique détaillé d'un événement (#931).
Ajoute de la couleur aux lignes de l'historique détaillé d'un événement
lorsque celles-ci correspondent à un changement d'état.
La couleur représentée est celle de l'état cible, ex: CRITICAL -> rouge.

Change-Id: I6e0acca5c49ceee634334025db05073c55d39cd8
Refs: #931.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/458
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Aurelien BOMPARD <aurelien.bompard@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -129,7 +129,7 @@
 			</tr>
 
 	        <tr py:when="0" py:for="(index, entry) in enumerate(page.items)" class="${['odd', 'even'][index % 2]}">
-				<td class="plugin_date">
+				<td class="plugin_date ${entry.state is not None and StateName.value_to_statename(entry.state) or ''}">
                 	${entry.get_date('timestamp')}
                 	<br />
                 	[${entry.get_since_date('timestamp')}]
