s/CorrEvent.status/CorrEvent.ack/
Le changement permet de se débarrasser du champ texte dont les valeurs
étaient organisées pour permettre le tri des événements dans VigiBoard
via un hack.
À la place, le champ CorrEvent.ack (no pun intended) et les constantes
associées (CorrEvent.ACK_NONE, etc.) peuvent être utilisées.

Fait aussi en sorte que les valeurs du champ "Type" et "Value" soient
traduits dans l'historique de VigiBoard (dans la mesure du possible et
du raisonnable).

Change-Id: I749fa189a465a4947dfeca659c151e671f915da9
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/463
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Aurelien BOMPARD <aurelien.bompard@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -135,8 +135,8 @@
                 	[${entry.get_since_date('timestamp')}]
                 </td>
 				<td class="plugin_user">${entry.username}</td>
-				<td class="plugin_type">${entry.type_action}</td>
-				<td class="plugin_value">${entry.value}</td>
+				<td class="plugin_type">${_(entry.type_action)}</td>
+				<td class="plugin_value">${_(entry.value)}</td>
 				<td class="plugin_text">${entry.text}</td>
 			</tr>
 		</tbody>
