--- a/src/vigilo/themes/templates/vigiboard/plugins/status.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/status.html
@@ -26,7 +26,8 @@
 </py:def>
 
 <py:def function="status_data(name, instance, data, plugin_data)">
-    <py:with vars="cause = data[0].cause; ack = [data[0].status, u'None'][data[0].status is None]">
+    <?python from vigilo.models.tables import CorrEvent ?>
+    <py:with vars="cause = data[0].cause; ack = data[0].ack">
     <py:with vars="state = StateName.value_to_statename(cause.current_state)">
 
     <td class="plugin_${name}">
@@ -40,14 +41,14 @@
     </td>
 
     <td class="plugin_${name}" py:choose="">
-        <img py:when="ack == 'Acknowledged'" src="${tg.url('/images/checked.png')}"
+        <img py:when="ack == CorrEvent.ACK_KNOWN" src="${tg.url('/images/checked.png')}"
             alt="Acknowledged" title="Acknowledged" />
-        <img py:when="ack == 'AAClosed'" src="${tg.url('/images/crossed.png')}"
+        <img py:when="ack == CorrEvent.ACK_CLOSED" src="${tg.url('/images/crossed.png')}"
             alt="Acknowledged and Closed" title="Acknowledged and Closed" />
     </td>
 
     <py:choose test="">
-        <py:when test="ack == 'AAClosed' and state == u'OK'">
+        <py:when test="ack == CorrEvent.ACK_CLOSED and state == u'OK'">
             <td class="plugin_${name}" colspan="2" py:choose=""></td>
         </py:when>
 
